Remarks are broken into multiple lines if necessary. All text fields are limited to 64 characters to keep them on the page. Various JS errors fixed

--- a/saw/jquery.Jcrop.css
+++ b/saw/jquery.Jcrop.css
@@ -15,7 +15,7 @@
 /* Selection Border */
 .jcrop-vline,
 .jcrop-hline {
-  background: #ffffff url("./images/Jcrop.gif");
+  background: #ffffff url("./Jcrop.gif");
   font-size: 0;
   position: absolute;
 }
